Fix overlapping class names.

--- a/src/components/analytics/analytics.css
+++ b/src/components/analytics/analytics.css
@@ -15,7 +15,7 @@
     display: flex;
     color: #0F58CB;
 }
-.ellipsis-style {
+.ellipsis-style-analytics {
     width: 100%;
     white-space: nowrap;
     overflow: hidden;
